# backend/flux/api/v1/__init__.py
@@ -2,7 +2,16 @@
 
 from fastapi import APIRouter
 
-from flux.api.v1 import agents, connectors, git, health, models, tasks, workspace
+from flux.api.v1 import (
+    agents,
+    connectors,
+    git,
+    health,
+    models,
+    projects,
+    tasks,
+    workspace,
+)
 
 api_v1_router = APIRouter()
 api_v1_router.include_router(health.router)
@@ -10,6 +19,7 @@ api_v1_router.include_router(agents.router)
 api_v1_router.include_router(tasks.router)
 api_v1_router.include_router(workspace.router)
 api_v1_router.include_router(git.router)
+api_v1_router.include_router(projects.router)
 api_v1_router.include_router(models.router)
 api_v1_router.include_router(connectors.router)
 
